// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfiniteList /> on Container expect to render 1`] = `
<div
  className="infinite-list"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
    style={
      Object {
        "marginTop": "-0px",
        "position": "absolute",
      }
    }
  />
</div>
`;

exports[`<InfiniteList /> on Container expect to render with custom className 1`] = `
<div
  className="custom-infinite-list"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
    style={
      Object {
        "marginTop": "-0px",
        "position": "absolute",
      }
    }
  />
</div>
`;

exports[`<InfiniteList /> on Container expect to render with custom tagName 1`] = `
<ul
  className="infinite-list"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <li
    className="-risl-sentinel"
    style={
      Object {
        "marginTop": "-0px",
        "position": "absolute",
      }
    }
  />
</ul>
`;

exports[`<InfiniteList /> on Container expect to render with threshold 1`] = `
<div
  className="infinite-list"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
    style={
      Object {
        "marginTop": "-150px",
        "position": "absolute",
      }
    }
  />
</div>
`;
